Fixed input field shift when progressIndicator is added
Monotone-Parent: 201354f7188a378eb3816d4e4773c4638cf6076f
Monotone-Revision: 2e5131b1c08c6c88775f6c14a90fafed85109af8

Monotone-Author: crobert@inverse.ca
Monotone-Date: 2009-09-22T17:51:18
Monotone-Branch: ca.inverse.sogo

--- a/UI/WebServerResources/UIxContactsUserFolders.css
+++ b/UI/WebServerResources/UIxContactsUserFolders.css
@@ -11,9 +11,10 @@ SPAN.searchBox
 { float: none !important; }
 
 IMG#progressIndicator
-{ float: right;
-  margin: 0;
-  padding: 1em; }
+{ float: none;
+  position: absolute;
+  right: 1em;
+  margin: 7px 5px; }}
 
 INPUT#searchValue
 { margin: 0px; }
